Remove overflow fix, address later

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,10 +436,3 @@ h2 {
 #toTopBtn:hover {
   background-color: #555; /* Add a dark-grey background on hover */
 }
-
-.container, 
-.container-fluid,
-.row {
-    margin: 0;
-    padding: 0;
-}
